--- a/package.json
+++ b/package.json
@@ -225,7 +225,7 @@
     "unist-util-visit-parents": "5.1.3"
   },
   "engines": {
-    "node": ">=16"
+    "node": "18"
   },
   "reporters": [
     "default",
